--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,13 @@ img {
 	width: 50%;
 }
 
+p {
+font-size: 0.4em;
+}
 
+a {
+font-size: 0.2em;
+}
 
 /*********************/
 /* HAMBURGER MENU */
@@ -111,7 +117,7 @@ nav > button {
 
 
 /*********************/
-/* section 1 */
+/* section 1 /liverpool foto */
 /*********************/
 
   /* de foto juist positioneren */
@@ -131,7 +137,7 @@ section:first-of-type img{
   section:first-of-type h1 {
 	position: absolute;      /* legt hem bovenop de foto */
 	left: 0.3em;
-	bottom: 6.5em;              /* zodat hij hoog op de foto staat */
+	bottom: 6.5em;          
     padding: 0.1em 0.3em;      /* ruimte tussen tekst en witruimte */
 
 	background: #fff;        
@@ -181,7 +187,7 @@ section:first-of-type p:nth-of-type(2){
 
 section:first-of-type div {
 	position: absolute;
-	bottom: 4em;
+	bottom: 3.5em;
 	
 	left: 41%;
 	transform: translateX(-50%);  /*wat houdt dit in */
@@ -193,7 +199,7 @@ section:first-of-type div {
   
   section:first-of-type div a {
 	flex: 1;                   /* verdeelt de ruimte gelijk over alle knoppen */
-	padding: 0.4em 0.3em;
+	padding: 0.5em 0.3em;
 
 	border: 0.125em solid #111;
 	
@@ -262,7 +268,7 @@ section:first-of-type div {
 	margin: 0;
 	padding: 0.2em 0.4em;
 	background: #fff;
-	
+
     font-weight: 600;
     font-size: 0.9em;
     font-family: sans-serif;
