--- a/styles/style.css
+++ b/styles/style.css
@@ -28,10 +28,6 @@ html, body {
 	--link-decoration: none;
 }
 
-img {
-	width: 90%;
-}
-
 
 
 /*********************/
@@ -48,6 +44,7 @@ header {
 	display:flex;
 	position:sticky;
 	padding: var(--menu-padding);
+	z-index: 1;
   }
   
   
@@ -69,7 +66,7 @@ nav > button {
   }
 
   /* hoofdmenu*/
-  nav {
+  header nav {
 	position:fixed;
 	overflow-y: auto;   
 	left:0;
@@ -77,7 +74,7 @@ nav > button {
 	top:0;
 	bottom:0;
   
-	background:#fff;
+	background:white;
 	
 	translate:-100% 0%;
 	transition:translate .3s;
@@ -86,20 +83,21 @@ nav > button {
   /* als menu open is */
   nav.toonMenu {
 	translate:0% 0%;
+	z-index: 5;
   }
   
-  nav ul {
+  header nav ul {
 	list-style:none;
   }
 
-  nav a {
+  header nav a {
 	display:block;
 	padding: var(--menu-padding);
 	text-decoration:none;
 	color:#111;
   }
   
-  nav p {
+  header nav p {
 	padding: 1em 1em;
   }
   
@@ -495,7 +493,10 @@ section:nth-of-type(5) ul:nth-of-type(1){
   }
   
 
-
+  section:nth-of-type(5) h2{
+		display: none;	  
+  }
+  
 
 
   /*********************/
@@ -688,8 +689,14 @@ section:nth-of-type(8) {
   section:nth-of-type(8) li a:hover {
 	text-decoration: underline;
   }
-  
 
+  section:nth-of-type(8) h2 {
+	width: 0.1em;
+	height: 0.1em;
+	overflow: hidden;
+  }
+  
+  
   /*********************/
 /* section 9 – footer artikel */
 /*********************/
@@ -731,7 +738,7 @@ section:nth-of-type(9){
 
 
   /*********************/
-/* section 10 */
+/* section 10 - jou mening telt*/
 /*********************/
 section:nth-of-type(10){
 	background:#eef2f5;        
@@ -785,17 +792,11 @@ section:nth-of-type(10){
 
 
 
-
-
-
-
-
-
 	  /*********************/
 /* section 11 - Word lid */
 /*********************/
 
-/* de groene band */
+
 footer section:first-of-type{
 	background:#3b7b68;
 	color:#fff;
@@ -803,7 +804,7 @@ footer section:first-of-type{
 	padding:2em 1em;
   }
   
-  /* grote titel */
+  /*titel */
   footer section:first-of-type h2{
     margin-top: 0.4em;
     padding-bottom: 0.6em;
@@ -831,18 +832,8 @@ footer section:first-of-type{
 	letter-spacing:0.04em;
     font-family: sans-serif;
 	font-weight:700;
-	
   }
-  
- 
-
-
-
-
-
-
-
-	  	
+   	
 /* tweede lijn achter de knop */
 footer section:first-of-type a:after {
 	content: "";
@@ -853,3 +844,98 @@ footer section:first-of-type a:after {
 	height: 100%;
 	border: 1px solid white;  
   }
+
+
+
+/*********************/
+/* footer nav*/
+/*********************/
+
+footer nav:nth-of-type(2){
+	display:grid;
+	background:#000;
+	
+	grid-template-columns:repeat(2, 1fr 1fr);
+	gap:0.8em 2em;        
+	
+	padding:2em 4.5em;
+  }
+
+  footer nav:nth-of-type(2) ul {
+	padding: 0;
+  }
+  
+  footer nav:nth-of-type(2) ul li:not(:last-child){
+	margin:0 0 2.7em;
+  }
+  
+  footer nav:nth-of-type(2) a{
+	color:#fff;
+	text-decoration:none;
+	font-family:sans-serif;
+	font-size:0.8em;
+	font-weight:500;
+	line-height:1.4;
+  }
+
+  footer nav:nth-of-type(2) p {
+	grid-column: 1 / -1;     
+	max-width: 80%;  
+
+	color: #fff;
+	font-family: sans-serif;
+	font-size: 0.8em;
+	line-height: 1.5;
+	text-align: left;
+  }
+
+  footer nav:nth-of-type(2) a:hover{
+	text-decoration:underline;
+  }
+
+footer nav:nth-of-type(1) {
+display:flex;
+justify-content:space-around;
+align-items:center;
+
+padding:1em 0;
+
+color: white;
+background:#000;
+}
+
+footer nav:nth-of-type(1) a {
+color: white;
+text-decoration: var(--link-decoration);
+font-weight: bold;	
+}
+
+
+/*********************/
+/* footer - beleid*/
+/*********************/
+
+
+
+  /* Zwarte basis voor dit blok */
+footer {
+	background:#000;
+  }
+  
+  /* de twee buttons */
+  footer button{
+	width:30%;
+	padding:0.4em 0;
+	margin-left: 3em;
+	
+	background:none;
+	border:none;	
+	text-align: left;
+	border-bottom:0.15em solid white;   
+	
+	color:#fff;
+	font-family:sans-serif;
+	font-size:1em;
+	font-weight:700;
+  }
+  
