--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,9 @@
 	html, body {
 		margin: 0;
 		padding: 0;
+		scroll-behavior: smooth;
 	}
 	
-
 
 
 
@@ -33,36 +33,59 @@
 	/* HAMBURGER MENU */
 	/*********************/
 
+
+
+
+
+
+
+
+	
+
+header {
+	display:flex;
+	position:sticky;
+	padding: var(--menu-padding);
+	z-index: 1;
+}
+		
+/*logo in de hamburger menu*/
 nav img {
 	display: block;
 	width:18%;
 	margin: 0 auto;
 	}
 
-	header {
-		display:flex;
-		position:sticky;
-		padding: var(--menu-padding);
-		z-index: 1;
-	}
-	
-	
-	/* MENU knop */
-	header button {
-		order:-1;
-		font:inherit;
-		background:none;
-		border: 0;
-		
-	}
 
-	/* sluitknop rechtsboven */
-	nav > button {
-		position: absolute;
-		top: 1em;
-		right: 1em;
-		font-size: 1.5em;
-	}
+/*de svg op een rij*/
+header:first-of-type > ul {
+    display: flex;
+    list-style: none;
+}
+
+/*uitgeklapte pop up die nu verborgen is*/
+header div p {
+	overflow: hidden;
+	max-height: 0;
+	padding: 0;
+}
+
+/* MENU knop */
+header button {
+	order:-1;
+	font:inherit;
+	background:none;
+	border: 0;
+		
+}
+
+/* sluitknop rechtsboven */
+nav > button {
+	position: absolute;
+	top: 1em;
+	right: 1em;
+	font-size: 1.5em;
+}
 
 	/* hoofdmenu*/
 	header nav {
@@ -494,7 +517,7 @@ nav img {
 	}
 	
 
-	section:nth-of-type(5) h2{
+	main section:nth-of-type(5) h2{
 			display: none;	  
 	}
 	
@@ -750,7 +773,7 @@ nav img {
 	section:nth-of-type(10) h2{
 		letter-spacing:0.2em;
 		font-family:'Bebas Neue', sans-serif;
-		font-weight:bold;
+		font-weight:lighter;
 		font-size:1.6em;
 	}
 	
@@ -956,23 +979,25 @@ nav img {
 	}
 	
 	body.detailpagina main section:nth-of-type(1) h1{
-		margin: 1em 0.5em;
-
+		margin: 1em 0;
+        margin-bottom: -0.1em;
+		margin-left: 0.2em;
 		color:var(--color-text);
 
-		font-family:'Bebas Neue', sans-serif;
+		font-family: sans-serif;
 		font-weight:700;
 		font-size:1.5em;
+		line-height: 1.3;
 		letter-spacing:0.04em;
 
 	}
 
 	body.detailpagina main section:nth-of-type(1) h2{ 
-		font-family:'Bebas Neue', sans-serif;
+		font-family: sans-serif;
 		letter-spacing:0.03em;
 		font-size:1.1em;
 		
-		margin-left: 1em;
+		margin-left: 0.8em;
 	}
 		
 	/* carrousel */
@@ -1015,9 +1040,9 @@ nav img {
 	body.detailpagina main form fieldset:nth-of-type(1) legend{
 		margin:0.4em -0.2em;
 
-		font-family:'Bebas Neue', sans-serif;
-		font-weight:700;
-		font-size:1em;
+		font-family:sans-serif;
+		font-weight:600;
+		font-size:0.98em;
 
 		letter-spacing:0.03em;
 	}
@@ -1031,7 +1056,7 @@ nav img {
 		padding:0;
 	}
 	
-		/*radio buttons onzichtbaar maken*/ 
+	/*radio buttons onzichtbaar maken*/ 
 	body.detailpagina main form fieldset:nth-of-type(1) label input{
 		position:absolute;
 		opacity:0;
@@ -1082,10 +1107,9 @@ nav img {
 	body.detailpagina main form fieldset:nth-of-type(2) legend{
 		margin:0.8em -0.2em;
 
-		font-family:'Bebas Neue', sans-serif;
-		font-weight:700;
-		font-size:1em;
-
+		font-family:sans-serif;
+		font-weight:600;
+		font-size:0.98em;
 		letter-spacing:0.03em;
 	}
 	
@@ -1376,13 +1400,9 @@ nav img {
 
 
 		
-	/*********************/
-	/*maak je look helemal - carrousel*/
-	/*********************/
-
-body.detailpagina main section:nth-of-type(3)  h2 {
-		position: static;
-}
+/*********************/
+/*maak je look helemal - carrousel*/
+/*********************/
 	
 /* carrousel */
 body.detailpagina main section:nth-of-type(3) ul {
@@ -1402,22 +1422,22 @@ body.detailpagina main section:nth-of-type(3) li {
 		flex-shrink: 0;
 		flex-grow: 0;
 		scroll-snap-align: center;
-	}
+}
 	
 /* linkjes */
 body.detailpagina main section:nth-of-type(3) li a {
 		color: var(--color-text);
 		text-decoration: var(--link-decoration);
-	}
+}
 	
 /* afbeeldingen */
 body.detailpagina main section:nth-of-type(3) li a img {
 		width: 98%;
 		height: auto;
-	}
-	
+}
+
 /* de p's - prijzen*/
-body.detailpagina main section:nth-of-type(3) li a p:first-of-type {
+body.detailpagina main section:nth-of-type(3) li a p {
 		position: static;
 		width: 100%;
 		padding: 0;
@@ -1428,9 +1448,9 @@ body.detailpagina main section:nth-of-type(3) li a p:first-of-type {
 		font-weight:bold;
 		line-height: 1.7;
 		color: var(--color-text);
-	}
+}
 	
-	/* de h3 - titels */
+/* de h3 - titels */
 body.detailpagina main section:nth-of-type(3) li a h3 {
 		width: 100%;
 		margin: 0.4em 0;
@@ -1441,14 +1461,13 @@ body.detailpagina main section:nth-of-type(3) li a h3 {
 		font-weight: 400;
 		line-height: 1.5;	
 		color: var(--color-text);
-	}
+}
 	
 	/* span - originals */
 body.detailpagina main section:nth-of-type(3) li a span {
 		display: block;
 		width: 100%;
-		margin: 0 auto .6em;
-	
+
 		font-family: 'Helvetica Neue', Arial, sans-serif;
 		font-size: 0.9em;
 		font-weight: 400;
@@ -1456,19 +1475,138 @@ body.detailpagina main section:nth-of-type(3) li a span {
 	}
 	
 body.detailpagina main section:nth-of-type(3) h2 {
-	margin-top: 3em;
+	position: static;
+	margin-top: 1.5em;
+    letter-spacing: 0.09em;
 
-	font-weight: 800;
+	font-weight:200;
 	font-family: 'Bebas Neue', sans-serif; 
-	font-size: 1.7em;
+	font-size: 2.1em;
 	}
 
 
 
+		
+/*********************/
+/*mischien vind je dit ook leuk - carrousel*/	
+/*********************/
 
-
-
-
-
-
+/* titel */
+body.detailpagina main section:nth-of-type(4) h2{
 	
+	margin-top: 3em;
+	margin-left: 0.38em;
+	letter-spacing: 0.09em;
+
+	font-weight:200;
+	font-family: 'Bebas Neue', sans-serif; 
+	font-size: 2.1em;
+  }
+  
+body.detailpagina main section:nth-of-type(4) ul{
+	display:flex;
+	overflow:auto;
+	scroll-snap-type:x mandatory;
+	scroll-behavior:smooth;
+	overscroll-behavior-x:contain;
+
+	gap:0.6em;
+	padding:0.4em 0.6em;
+	margin:0;
+	list-style:none;
+  }
+  
+body.detailpagina main section:nth-of-type(4) li{
+	flex-basis:50%;
+	flex-grow: 0;
+	flex-shrink: 0;
+	scroll-snap-align:center;
+  }
+  
+body.detailpagina main section:nth-of-type(4) li a{
+	color:var(--color-text);
+	text-decoration:var(--link-decoration);
+  }
+  
+body.detailpagina main section:nth-of-type(4) li a img{
+	width:100%;
+	height: auto;
+  }
+  
+/*de p's - prijzen*/
+body.detailpagina main section:nth-of-type(4) li a p{
+	position:static;
+	margin:.4em 0 0;
+	padding:0;
+
+	font-family:'Helvetica Neue', Arial, sans-serif;
+	font-size:0.95em;
+	font-weight:bold;         
+	line-height:1.7;
+	color:var(--color-text);
+  }
+  
+/* titel */
+body.detailpagina main section:nth-of-type(4) li a h3{
+	margin:0.4em 0;
+	margin-top:-0.2em;
+
+	font-family:'Helvetica Neue', Arial, sans-serif;
+	font-size:0.95em;
+	font-weight:400;
+	line-height:1.4;
+	
+	color:var(--color-text);
+  }
+  
+/* span - originals */
+body.detailpagina main section:nth-of-type(4) li a span{
+	display: block;
+	width: 100%;
+
+	font-family: 'Helvetica Neue', Arial, sans-serif;
+	font-size: 0.9em;
+	font-weight: 400;
+	color: #9a9a9a;
+  }
+  
+
+
+
+
+/*********************/
+/*Geef jou mening*/	
+/*********************/
+
+body.detailpagina main section:nth-of-type(5){
+	background:#eef2f5;        
+	padding:1.2em 1em 0;      
+}
+
+/* titel */
+body.detailpagina main section:nth-of-type(5) h2{
+	display:block; 			
+	letter-spacing:0.2em;
+	font-family:'Bebas Neue', sans-serif;
+	font-weight:lighter;
+	font-size:1.6em;
+}
+
+/* korte tekst */
+body.detailpagina main section:nth-of-type(5) p{
+	margin:1.2em 0;
+	font-family:sans-serif;
+	font-size: 0.9em;
+	color:gray;        /*doet het niet*/
+	color:var(--color-text);
+	
+}
+
+body.detailpagina main section:nth-of-type(5) a {
+all: unset;
+
+
+}
+
+
+
