--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,32 @@
 	/* HAMBURGER MENU */
 	/*********************/
 
+
+/* Paneel voor HEREN (3e ul) en SNEAKERS (4e ul) schuiven in over het hoofdmenu */
+header nav > ul:nth-of-type(3),
+header nav > ul:nth-of-type(4) {
+  position: absolute;
+  inset: 0;
+  background: #fff;
+  overflow-y: auto;
+
+  translate: 100% 0%;
+  transition: translate .3s;
+}
+
+/* HEREN schoenen-menu in beeld */
+header nav.toonMannenSchoenen > ul:nth-of-type(3) {
+  translate: 0% 0%;
+  z-index: 6;
+}
+
+/* HEREN sneakers-menu in beeld */
+header nav.toonMannenSneakers > ul:nth-of-type(4) {
+  translate: 0% 0%;
+  z-index: 7;
+}
+
+
 header {
 	display:flex;
 	flex-wrap: wrap;
@@ -499,13 +525,19 @@ header:first-of-type > ul > li:nth-child(3) svg {
   section:nth-of-type(5) ul:nth-of-type(2) li > button {
 	all: unset;
 	position: absolute;
-	
 	top: 0.5em;
 	right: 0.5em;
 	width: 2.0em;
 	height: 2.0em;
   }
   
+
+
+
+
+
+
+	
 	/* scrolbaar maken van knoppen */
 	section:nth-of-type(5) ul:nth-of-type(1){
 		display:flex;
